--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -191,5 +191,20 @@ body {
 
 }
 
+#videosStartButton {
+  font-size: 2rem;
+  border: 1px solid lightseagreen;
+  padding: 1rem 3rem;
+  border-radius: 2rem;
+  color: lightseagreen;
+  text-align: center;
+  cursor: pointer;
+  transition: 200ms all ease-in-out;
+  margin: 3rem auto;
+}
 
+#videosStartButton:hover {
+  background-color: lightseagreen;
+  color: white;
+}
 
